image layout fixes on wide screens + scrollbar removal

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,19 @@
   --spacing-1000: 5rem; /* 80px */
 }
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 body {
   font-family: "Outfit", Arial, Helvetica, sans-serif;
 }
